# INFO-H410-Final_Project

./: .gitignore  README.md  ai.py  main.py  pyproject.toml  rl.py  save.py  solver.py  test  test.py  tile.py
doc/: stats.ods
model/: q_agent_config.pickle  saved_model.pb  scores_8.p
model/model_cnn/: saved_model.pb
model/model_cnn/variables/: variables.index
model/model_cnn16/: saved_model.pb
model/model_cnn16/variables/: variables.index
model/model_cnn8/: saved_model.pb
model/variables/: variables.data-00000-of-00001  variables.index
model/variables/variables_temp_2a977f1703f54ae3b3b96cd521a87c73/: part-00000-of-00001.index
model/variables/variables_temp_5e411f8c89234b2089677f86ef506b0e/: part-00000-of-00001.data-00000-of-00001  part-00000-of-00001.index
