[tool.poetry]
name = "minesweeper"
version = "0.2.0"
description = ""
authors = ["Julien Baudru <julien.baudru@ulb.be>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
PyQt5 = "^5.15.6"
keras = "2.3.1"
sklearn = "^0.0"
tensorflow = "2.2"
tensorflow-gpu = "2.2"
matplotlib = "^3.5.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
